# asset-price-db

./: .dockerignore  .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  pyproject.toml  symbols.yaml.example
.github/workflows/: ci.yml  deploy.yml
docs/: ARCHITECTURE.md  oracle-cloud-deployment.md  oracle-cloud-manual-ui-setup.md  oracle-cloud-terraform-tailscale.md
src/: config.py  exceptions.py  export.py  utils.py  watchlist.py
src/cli/: deps.py  main.py  state.py
src/cli/commands/: check.py  db.py  download.py  query.py  status.py  sync.py
src/db/: connection.py  repository.py  schema.py
src/services/: downloader.py  integrity.py  sync.py
src/sources/: base.py  ccxt_source.py  registry.py  yahoo.py
tests/: conftest.py  test_cli.py  test_cli_commands.py  test_cli_state.py  test_config.py  test_db_connection.py  test_db_repository.py  test_db_schema.py  test_export.py  test_integrity.py  test_registry.py  test_services.py  test_sources.py  test_sync_service.py  test_utils.py  test_watchlist.py  test_yahoo_source.py
